deploy: 1a7089c5d4f92b12497df15974a720536c7ba043

--- a/examples/01_manipulating/plot_duplicates.html
+++ b/examples/01_manipulating/plot_duplicates.html
@@ -96,7 +96,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content">WARNING: pyDARTdiags is currently in alpha stage of development - expect bugs and changes</div>
+  <div class="bd-header-announcement__content">Welcome to the pyDARTdiags documentation! 🚀</div>
 </aside>
 
   
@@ -777,7 +777,7 @@ Number of duplicate observations: 1933
 Number of observations after removing duplicates: 315105
 </pre></div>
 </div>
-<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 4.030 seconds)</p>
+<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 4.156 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-01-manipulating-plot-duplicates-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../../_downloads/25e8be5ac3e7fb5340f4187d73e81dd4/plot_duplicates.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">plot_duplicates.ipynb</span></code></a></p>
@@ -850,7 +850,7 @@ Number of observations after removing duplicates: 315105
 
   <p class="copyright">
     
-      © Copyright 2024, University Corporation for Atmospheric Research.
+      © Copyright 2025, University Corporation for Atmospheric Research.
       <br/>
     
   </p>
