--- a/examples/03_diagnostics/plot_grand_stats.html
+++ b/examples/03_diagnostics/plot_grand_stats.html
@@ -96,7 +96,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content">WARNING: pyDARTdiags is currently in alpha stage of development - expect bugs and changes</div>
+  <div class="bd-header-announcement__content">Welcome to the pyDARTdiags documentation! 🚀</div>
 </aside>
 
   
@@ -917,7 +917,7 @@ for each type of observation.</p>
 </div>
 </div>
 <br />
-<br /><p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.116 seconds)</p>
+<br /><p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.129 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-03-diagnostics-plot-grand-stats-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../../_downloads/ce101c761d274087ecac0cbfd4585183/plot_grand_stats.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">plot_grand_stats.ipynb</span></code></a></p>
@@ -990,7 +990,7 @@ for each type of observation.</p>
 
   <p class="copyright">
     
-      © Copyright 2024, University Corporation for Atmospheric Research.
+      © Copyright 2025, University Corporation for Atmospheric Research.
       <br/>
     
   </p>
