--- a/devel/index.html
+++ b/devel/index.html
@@ -96,7 +96,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content">WARNING: pyDARTdiags is currently in alpha stage of development - expect bugs and changes</div>
+  <div class="bd-header-announcement__content">Welcome to the pyDARTdiags documentation! 🚀</div>
 </aside>
 
   
@@ -587,7 +587,7 @@ Code coverage for the test can be calculated locally using the pytest-cov packag
 
   <p class="copyright">
     
-      © Copyright 2024, University Corporation for Atmospheric Research.
+      © Copyright 2025, University Corporation for Atmospheric Research.
       <br/>
     
   </p>
