--- a/examples/01_manipulating/plot_remove_obs.html
+++ b/examples/01_manipulating/plot_remove_obs.html
@@ -96,7 +96,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content">WARNING: pyDARTdiags is currently in alpha stage of development - expect bugs and changes</div>
+  <div class="bd-header-announcement__content">Welcome to the pyDARTdiags documentation! 🚀</div>
 </aside>
 
   
@@ -648,7 +648,7 @@ dtype: int64
 </pre></div>
 </div>
 <p>The new file will not have the ‘GPSRO_REFRACTIVITY’ observations.</p>
-<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.031 seconds)</p>
+<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 0.034 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-01-manipulating-plot-remove-obs-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../../_downloads/35cc49d2ff3b046822bbe1eb8f180401/plot_remove_obs.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">plot_remove_obs.ipynb</span></code></a></p>
@@ -721,7 +721,7 @@ dtype: int64
 
   <p class="copyright">
     
-      © Copyright 2024, University Corporation for Atmospheric Research.
+      © Copyright 2025, University Corporation for Atmospheric Research.
       <br/>
     
   </p>
