--- a/examples/03_diagnostics/plot_rank_histogram.html
+++ b/examples/03_diagnostics/plot_rank_histogram.html
@@ -96,7 +96,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content">WARNING: pyDARTdiags is currently in alpha stage of development - expect bugs and changes</div>
+  <div class="bd-header-announcement__content">Welcome to the pyDARTdiags documentation! 🚀</div>
 </aside>
 
   
@@ -484,7 +484,7 @@ and posterior rank histograms are plotted.</p>
 <li><img src="../../_images/sphx_glr_plot_rank_histogram_006.png" srcset="../../_images/sphx_glr_plot_rank_histogram_006.png" alt="ACARS_TEMPERATURE at Level 60000.0, Prior Rank Histogram, Posterior Rank Histogram" class = "sphx-glr-multi-img"/></li>
 <li><img src="../../_images/sphx_glr_plot_rank_histogram_007.png" srcset="../../_images/sphx_glr_plot_rank_histogram_007.png" alt="ACARS_TEMPERATURE at Level 77500.0, Prior Rank Histogram, Posterior Rank Histogram" class = "sphx-glr-multi-img"/></li>
 </ul>
-<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 2.462 seconds)</p>
+<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> (0 minutes 2.611 seconds)</p>
 <div class="sphx-glr-footer sphx-glr-footer-example docutils container" id="sphx-glr-download-examples-03-diagnostics-plot-rank-histogram-py">
 <div class="sphx-glr-download sphx-glr-download-jupyter docutils container">
 <p><a class="reference download internal" download="" href="../../_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Jupyter</span> <span class="pre">notebook:</span> <span class="pre">plot_rank_histogram.ipynb</span></code></a></p>
@@ -557,7 +557,7 @@ and posterior rank histograms are plotted.</p>
 
   <p class="copyright">
     
-      © Copyright 2024, University Corporation for Atmospheric Research.
+      © Copyright 2025, University Corporation for Atmospheric Research.
       <br/>
     
   </p>
