--- a/userguide/statistics.html
+++ b/userguide/statistics.html
@@ -97,7 +97,7 @@
   <aside id="bd-header-version-warning" class="d-none d-print-none" aria-label="Version warning"></aside>
 </div>
 <aside class="bd-header-announcement" aria-label="Announcement">
-  <div class="bd-header-announcement__content">WARNING: pyDARTdiags is currently in alpha stage of development - expect bugs and changes</div>
+  <div class="bd-header-announcement__content">Welcome to the pyDARTdiags documentation! 🚀</div>
 </aside>
 
   
@@ -666,7 +666,7 @@ include DART_QC 7 observations in the calculation of the statistics.</p>
 
   <p class="copyright">
     
-      © Copyright 2024, University Corporation for Atmospheric Research.
+      © Copyright 2025, University Corporation for Atmospheric Research.
       <br/>
     
   </p>
