deploy: efd4bfe61cf2435c74f3f6ca8b6a9235386e4e7c

--- a/genindex.html
+++ b/genindex.html
@@ -364,27 +364,20 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
- | <a href="#I"><strong>I</strong></a>
  | <a href="#J"><strong>J</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
- | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
- | <a href="#Q"><strong>Q</strong></a>
- | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
- | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.all_obs">all_obs (obs_sequence.ObsSequence attribute)</a>
-</li>
       <li><a href="api/stats.html#stats.apply_to_phases_by_obs">apply_to_phases_by_obs() (in module stats)</a>
 </li>
   </ul></td>
@@ -413,26 +406,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.calculate_rank">calculate_rank() (in module stats)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.check_trailing_record_length">check_trailing_record_length() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.collect_copie_names">collect_copie_names() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.collect_obs_types">collect_obs_types() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.column_headers">column_headers() (obs_sequence.ObsSequence method)</a>
-</li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.composite_types">composite_types() (obs_sequence.ObsSequence method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.construct_composit">construct_composit() (in module obs_sequence)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.convert_dart_time">convert_dart_time() (in module obs_sequence)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.copie_names">copie_names (obs_sequence.ObsSequence attribute)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_all_obs">create_all_obs() (obs_sequence.ObsSequence method)</a>
-</li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_header">create_header() (obs_sequence.ObsSequence method)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_header_from_dataframe">create_header_from_dataframe() (obs_sequence.ObsSequence method)</a>
@@ -443,10 +420,6 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.df">df (obs_sequence.ObsSequence attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.diag_stats">diag_stats() (in module stats)</a>
 </li>
   </ul></td>
@@ -454,10 +427,6 @@
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.generate_linked_list_pattern">generate_linked_list_pattern() (obs_sequence.ObsSequence static method)</a>
-</li>
-  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.grand_statistics">grand_statistics() (in module stats)</a>
 </li>
@@ -472,16 +441,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.has_posterior">has_posterior() (obs_sequence.ObsSequence method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.header">header (obs_sequence.ObsSequence attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="I">I</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.is_binary">is_binary() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -499,14 +458,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.layer_statistics">layer_statistics() (in module stats)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.list_to_obs">list_to_obs() (obs_sequence.ObsSequence method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.load_yaml_to_dict">load_yaml_to_dict() (in module obs_sequence)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.loc_mod">loc_mod (obs_sequence.ObsSequence attribute)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -522,13 +473,13 @@
       </ul></li>
       <li><a href="api/stats.html#stats.mean_then_sqrt">mean_then_sqrt() (in module stats)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     module
 
       <ul>
         <li><a href="api/matplots.html#module-0">matplots</a>
-</li>
-        <li><a href="api/obs_sequence.html#module-obs_sequence">obs_sequence</a>
 </li>
         <li><a href="api/plots.html#module-0">plots</a>
 </li>
@@ -538,42 +489,9 @@
   </ul></td>
 </tr></table>
 
-<h2 id="N">N</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.n_copies">n_copies (obs_sequence.ObsSequence attribute)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.n_non_qc">n_non_qc (obs_sequence.ObsSequence attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.n_qc">n_qc (obs_sequence.ObsSequence attribute)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.non_qc_copie_names">non_qc_copie_names (obs_sequence.ObsSequence attribute)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.num_qc_non_qc">num_qc_non_qc() (obs_sequence.ObsSequence static method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.obs_binary_reader">obs_binary_reader() (obs_sequence.ObsSequence method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.obs_reader">obs_reader() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li>
-    obs_sequence
-
-      <ul>
-        <li><a href="api/obs_sequence.html#module-obs_sequence">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.obs_to_list">obs_to_list() (obs_sequence.ObsSequence method)</a>
-</li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence">ObsSequence (class in obs_sequence)</a>
 </li>
   </ul></td>
@@ -608,7 +526,11 @@
 </li>
       </ul></li>
       <li><a href="api/stats.html#stats.possible_vs_used">possible_vs_used() (in module stats)</a>
+
+      <ul>
+        <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.possible_vs_used">(obs_sequence.ObsSequence method)</a>
 </li>
+      </ul></li>
       <li><a href="api/stats.html#stats.possible_vs_used_by_layer">possible_vs_used_by_layer() (in module stats)</a>
 </li>
       <li><a href="api/stats.html#stats.possible_vs_used_by_time">possible_vs_used_by_time() (in module stats)</a>
@@ -616,43 +538,17 @@
   </ul></td>
 </tr></table>
 
-<h2 id="Q">Q</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.qc_copie_names">qc_copie_names (obs_sequence.ObsSequence attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="R">R</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_binary_header">read_binary_header() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_header">read_header() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_record_length">read_record_length() (obs_sequence.ObsSequence static method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.replace_qc2_nan">replace_qc2_nan() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.reverse_types">reverse_types (obs_sequence.ObsSequence attribute)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.revert_qc2_nan">revert_qc2_nan() (obs_sequence.ObsSequence static method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.select_by_dart_qc">select_by_dart_qc() (obs_sequence.ObsSequence method)</a>
+</li>
       <li><a href="api/stats.html#stats.select_used_qcs">select_used_qcs() (in module stats)</a>
+
+      <ul>
+        <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.select_used_qcs">(obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.seq">seq (obs_sequence.ObsSequence attribute)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.split_metadata">split_metadata() (obs_sequence.ObsSequence static method)</a>
-</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
@@ -662,8 +558,6 @@
         <li><a href="api/stats.html#module-0">module</a>
 </li>
       </ul></li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.synonyms_for_obs">synonyms_for_obs (obs_sequence.ObsSequence attribute)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -673,30 +567,12 @@
       <li><a href="api/stats.html#stats.time_statistics">time_statistics() (in module stats)</a>
 </li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.types">types (obs_sequence.ObsSequence attribute)</a>
-</li>
-  </ul></td>
 </tr></table>
 
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_attributes_from_df">update_attributes_from_df() (obs_sequence.ObsSequence method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_linked_list">update_linked_list() (obs_sequence.ObsSequence static method)</a>
-</li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_types_dicts">update_types_dicts() (obs_sequence.ObsSequence static method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.vert">vert (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
