deploy: c1056bf8edcd904c789b7c6eb672484426d90ac1

--- a/genindex.html
+++ b/genindex.html
@@ -512,8 +512,12 @@
 </li>
       <li><a href="api/plots.html#plots.plot_profile_prior_post">plot_profile_prior_post() (in module plots)</a>
 </li>
-      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
+      <li><a href="api/matplots.html#matplots.plot_rank_histogram">plot_rank_histogram() (in module matplots)</a>
+
+      <ul>
+        <li><a href="api/plots.html#plots.plot_rank_histogram">(in module plots)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/matplots.html#matplots.plot_time_evolution">plot_time_evolution() (in module matplots)</a>
