--- a/devel/index.html
+++ b/devel/index.html
@@ -54,7 +54,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Contributors Guide" href="CONTRIBUTING.html" />
-    <link rel="prev" title="Statistics" href="../userguide/statistics.html" />
+    <link rel="prev" title="An example of using pyDARTdiags with DART and the Lorenz 63 model" href="../userguide/dartworkflow.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />
@@ -517,12 +517,12 @@ Code coverage for the test can be calculated locally using the pytest-cov packag
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../userguide/statistics.html"
+       href="../userguide/dartworkflow.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Statistics</p>
+        <p class="prev-next-title">An example of using pyDARTdiags with DART and the Lorenz 63 model</p>
       </div>
     </a>
     <a class="right-next"
