deploy: 4b69d48ca3ee979b28faf6225d9033a9a3f91fb1

--- a/genindex.html
+++ b/genindex.html
@@ -406,10 +406,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.calculate_rank">calculate_rank() (in module stats)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.composite_types">composite_types() (obs_sequence.ObsSequence method)</a>
+      <li><a href="api/example_data.html#data.clear_cache">clear_cache() (in module data)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.composite_types">composite_types() (obs_sequence.ObsSequence method)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_header">create_header() (obs_sequence.ObsSequence method)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_header_from_dataframe">create_header_from_dataframe() (obs_sequence.ObsSequence method)</a>
@@ -420,7 +422,18 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    data
+
+      <ul>
+        <li><a href="api/example_data.html#module-0">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.diag_stats">diag_stats() (in module stats)</a>
+</li>
+      <li><a href="api/example_data.html#data.download_all_data">download_all_data() (in module data)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -428,6 +441,12 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/example_data.html#data.get_data_cache_dir">get_data_cache_dir() (in module data)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/example_data.html#data.get_example_data">get_example_data() (in module data)</a>
+</li>
       <li><a href="api/stats.html#stats.grand_statistics">grand_statistics() (in module stats)</a>
 </li>
   </ul></td>
@@ -459,6 +478,10 @@
       <li><a href="api/stats.html#stats.layer_statistics">layer_statistics() (in module stats)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/example_data.html#data.list_available_data">list_available_data() (in module data)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="M">M</h2>
@@ -473,12 +496,12 @@
       </ul></li>
       <li><a href="api/stats.html#stats.mean_then_sqrt">mean_then_sqrt() (in module stats)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     module
 
       <ul>
+        <li><a href="api/example_data.html#module-0">data</a>
+</li>
         <li><a href="api/matplots.html#module-0">matplots</a>
 </li>
         <li><a href="api/plots.html#module-0">plots</a>
